tests/build/cases/impl_ui_node/delegate_list_expr_error_incorrect_type.stderr
error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
   --> cases/impl_ui_node/delegate_list_expr_error_incorrect_type.rs:9:32
    |
9   | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
    | -------------------------------^^^^^^^^^^^---------------------------------------
    | |                              |
    | |                              the trait `UiNodeList` is not implemented for `NotANodeList`
    | required by a bound introduced by this call
    |
note: required by a bound in `delegate_list`
   --> $WORKSPACE/zero-ui-core/src/ui_node.rs
    |
    |     pub fn delegate_list(d: &impl UiNodeList) -> &impl UiNodeList {
    |                                   ^^^^^^^^^^ required by this bound in `delegate_list`

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
   --> cases/impl_ui_node/delegate_list_expr_error_incorrect_type.rs:9:65
    |
9   | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
    | ----------------------------------------------------------------^^^^^^^^^^^^^^^--
    | |                                                               |
    | |                                                               the trait `UiNodeList` is not implemented for `NotANodeList`
    | required by a bound introduced by this call
    |
note: required by a bound in `delegate_list_mut`
   --> $WORKSPACE/zero-ui-core/src/ui_node.rs
    |
    |     pub fn delegate_list_mut(d: &mut impl UiNodeList) -> &mut impl UiNodeList {
    |                                           ^^^^^^^^^^ required by this bound in `delegate_list_mut`
